--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,6 @@
-<h1>ooo it's a site</h1>
+<h1>My Static Site Test</h1>
+<p>This is the content of my site</p>
+
+<footer>
+  And this is my footer
+</footer>
